<resources>
    <string name="app_name">HeyFence</string>
    <string name="title_activity_maps">Map</string>
    <string name="geofence_detail_title">GeoFencing Details</string>
    <string name="fence_name">Geofence name</string>
    <string name="fence_radius">Geofence radius (in metres)</string>
    <string name="submit">Submit</string>
    <string name="geofence_delete_title">Delete Geofence</string>
    <string name="delete_geofence_question">Are you sure you want to delete this Geofence?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="geofence_enter">You entered a GeoFence.</string>
    <string name="geofence_dwell">You\'re dwelling in a GeoFence.</string>
    <string name="geofence_exit">You exited a GeoFence</string>
    <string name="channel_desc">CHANNEL TO SEND NOTIFICATION WHILE TRANSITING IN A GEOFENCE</string>
    <string name="enter_proper_details">Enter proper details.</string>
</resources>