<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/enter_ip_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_alpha_bg"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/geofence_delete_title"
                    android:textColor="@color/text_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dialog_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/delete_geofence_question"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/submit_blue_bg"
                        android:gravity="center"
                        android:paddingStart="25dp"
                        android:paddingTop="7dp"
                        android:paddingEnd="25dp"
                        android:paddingBottom="7dp"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/btn_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@id/btn_yes"
                        android:background="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="15dp"
                        android:paddingTop="7dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/no"
                        android:textColor="@color/fence_blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
