<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enter_ip_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_alpha_bg"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        tools:ignore="RtlSymmetry">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/geofence_detail_title"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/close_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:src="@mipmap/close" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/fence_name"
                        android:textColor="@color/text_dark"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/et_fence_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/fence_detail_et_bg"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                        android:inputType="textCapWords"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:padding="6dp"
                        android:singleLine="true"
                        android:textColor="@color/text_dark"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/fence_radius"
                        android:textColor="@color/text_dark"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/et_fence_radius"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/fence_detail_et_bg"
                        android:inputType="number"
                        android:maxLength="5"
                        android:padding="6dp"
                        android:textColor="@color/text_dark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/submit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/submit_blue_bg"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
